// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui - PhoneInput > should control the value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-phone"
      >
        Phone
      </label>
      <div
        aria-disabled="false"
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-phone"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
          value="+33612345678"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should have a placeholder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-phone"
      >
        Phone
      </label>
      <div
        aria-disabled="false"
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
        >
          🇺🇸
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-phone"
          maxlength="20"
          name="phone"
          placeholder="Enter phone number"
          type="tel"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-phone"
      >
        Phone
      </label>
      <div
        aria-disabled="true"
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="true"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          disabled=""
          id="phone-phone"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
          value="+33612345678"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-phone"
      >
        Phone
      </label>
      <div
        aria-disabled="false"
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-phone"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
          value="+33612345678"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="phone-phone"
      >
        Phone
      </label>
      <div
        aria-disabled="false"
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="true"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
        >
          🇫🇷
        </div>
        <input
          aria-describedby="_r_9_"
          aria-invalid="true"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-phone"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          type="tel"
          value="+33612345678"
        />
      </div>
      <span
        class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        id="_r_9_"
      >
        Invalid phone number
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ui - PhoneInput > should render correctly with required field 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="phone-phone"
        >
          Phone
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        >
          *
        </span>
      </div>
      <div
        aria-disabled="false"
        class="styles__f9zn1x4 styles_large__f9zn1x1"
        data-disabled="false"
        data-error="false"
      >
        <div
          class="styles__f9zn1x0 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d"
        >
          🇫🇷
        </div>
        <input
          aria-invalid="false"
          class="styles__f9zn1x5"
          data-size="large"
          id="phone-phone"
          maxlength="20"
          name="phone"
          placeholder="+33 6 12 34 56 78"
          required=""
          type="tel"
          value="+33612345678"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
